[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tilesets/grieta_porta.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/CrackDoor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="OccluderPolygon2D" id=62]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="GDScript" id=64]

[sub_resource type="TileSet" id=60]
0/name = "grieta_porta.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 62 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grieta_porta.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
script = SubResource( 64 )

[node name="CrackDoorT" type="Node2D"]
script = ExtResource( 2 )
type_of_door = "top"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 16, 16 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Crack" type="TileMap" parent="."]
tile_set = SubResource( 60 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="Door" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 60 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -48.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 78.0
text = "Cost: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="StaticBody2D" to="." method="_on_StaticBody2D_input_event"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_exited"]
